# moats-verify

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  architecture.md  docker-compose.yml  idea.md  moats-verify-refactor-v2.md  pyproject.toml  requirements.txt  spec.md
backend/: __init__.py  cli.py  config.py  main.py
backend/api/: __init__.py  schemas.py
backend/api/routes/: libraries.py  (+3 more)
backend/connectors/: __init__.py  base.py  full_build.py  local_vectors.py
backend/core/: __init__.py  comparator.py  extractor.py  pipeline.py  retrieval.py  segmenter.py  verdict.py
backend/deprecated/: README.md  __init__.py
backend/evaluation/: __init__.py  bloom_checker.py  deepeval_scorer.py
backend/ingestion/: chunker.py  ingest.py
backend/intelligence/: __init__.py  entity_extractor.py  graph_builder.py
backend/llm/: provider.py
backend/storage/: __init__.py  chromadb.py  neo4j.py  sqlite.py
frontend/: README.md  package-lock.json  package.json
moats_library/: Dockerfile  __init__.py  agent.py  chat.py  config.py  requirements.txt
moats_library/.chainlit/: config.toml
moats_library/concepts/: __init__.py  extraction.py  relationships.py
moats_library/evaluation/: __init__.py  bloom_runner.py  deepeval_runner.py
moats_library/ingestion/: __init__.py  chunker.py  processor.py
moats_library/retrieval/: __init__.py  search.py  synthesis.py
moats_library/storage/: __init__.py  graph.py  sqlite.py  vectors.py
tests/: test_claim_extraction.py  test_connectors.py  test_contradiction_detection.py  test_dual_retrieval.py  test_pipeline.py
(+18 files in other folders)
